--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 }
 body{
   font-family: 'Ubuntu', sans-serif;
+  background-image: linear-gradient(180deg,#D7DDE8,#757F9A);
+
 }
 .App
 {
@@ -37,27 +39,8 @@ nav
   flex:var(--condiv-flex);
 }
 
-.home
-{
-  display: flex;
-  justify-content: center;
-  background: url(img/bgimg.jpg);
-  background-size: 100%;
-  flex-direction: column;
-  align-items: center;
-  
-}
 
-.work-hist
-{
-  display: flex;
-  justify-content: center;
-  background-size: 100%;
-  flex-direction: column;
-  align-items: center;
- 
-  
-}
+
 .profilepic
 {
   border-radius: 50%;
@@ -66,15 +49,7 @@ nav
   display: flex;
   justify-content: flex-end;
 }
-.typingeffect
-{
-  font-size: var(--typing-font);
-  margin-bottom: 30px;
-  color: #fff;
-    text-align: center;
-    width: 50%;
-    text-shadow: 0 5px 10px rgba(0,0,0,1);
-}
+
 
 nav ul{
   font-size:var(--fontsize-nav) ;
@@ -98,15 +73,7 @@ a
 {
   margin:10px 10px 30px 10px !important;
 }
-.skill-topic-heading
-{
-  margin:10px 10px 30px 10px !important;
-  color: #fff;
-  
-  text-shadow: 0 5px 10px rgba(0,0,0,1);
-  display: flex;
-  justify-content: center;
-}
+
 p{
   font-size: var(--fontsize-p);
 }
@@ -145,11 +112,6 @@ h1,h2,h3,h4,p{
 .active
 {
   font-weight: bolder;
-}
-.skills ul li
-{
-  list-style-type:none;
-  margin:30px;
 }
 
 @media all and (max-width: 450px) {
@@ -192,126 +154,4 @@ h1,h2,h3,h4,p{
   {
     padding-right: 0px;
   }
-}
-
-/* CSS for skills styling */
-.wrapper{
-  width:  50%;
-  padding: 2%;
-  font-family: 'Ubuntu', sans-serif;
-  margin:0 auto;
-  background-color: #2C5364;
-  border-radius: 20%;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
-
-}
-.skill {
-  margin-bottom: 20px;
-  position: relative;
-  overflow-x:hidden;
-
-}
-.skill > p {
-  font-size: 18px;
-  font-weight: 400;
-  color: #0F2027;
-  margin: 0;
-}
-.skill:before{
-  width: 100%;
-  height: 10px;
-  content: "";
-  display: block;
-  position: absolute;
-  background:#bdc3c7;
-  bottom: 0;
-}
-.skill-bar {
-  width: 100%;
-  height: 10px;
-  background:#0F2027;
-  display: block;
-  position: relative;
-}
-
-/* SKILL 1 */
-.skill1{
-  width: 90%;
-
-}
-.skill-bar span{
-  position: absolute;
-  border-top: 5px solid #f4392f;
-  top: -30px;
-  padding: 0;
-  font-size: 10px;
-  padding: 3px 0;
-  font-weight: 500;
-}
-.skill-bar {
-  position: relative;
-
-}
-
-.skill1 .skill-count1 {
-  right: 0;
-}
-/* SKILL 2 */
-.skill2{
-  width: 80%;
-}
-
-.skill2 .skill-count2 {
-  right: 0;
-}
-/* SKILL 3 */
-.skill3{
-  width: 60%;
-}
-.skill3 .skill-count3 {
-  right: 0;
-}
-
-/* SKILL 4 */
-.skill4{
-  width: 85%
-}
-
-.skill4 .skill-count4 {
-  right: 0;
-}
-
-/* SKILL 5 */
-.skill5{
-  width: 80%;
-}
-
-.skill5 .skill-count5 {
-  right: 0;
-}
-
-/* SKILL 6 */
-.skill6{
-  width: 60%
-}
-
-.skill6 .skill-count6 {
-  right: 0;
-}
-
-.skill7{
-  width: 50%
-}
-
-.skill7 .skill-count7 {
-  right: 0;
-}
-.skill8{
-  width: 40%
-}
-
-.skill8 .skill-count8 {
-  right: 0;
 }
